# comfy-malicious-node-test-bad-archive

./: example-from-data-it.py  nodes.py  pyproject.toml  requirements.txt  workflow.json
